# quantum-cli-sdk

./: .gitignore  .python-version  ARCHITECTURE_IMPROVEMENTS.md  Dockerfile.minimal  Dockerfile.qiskit  PLANNING.md  README.md  README_ARCHITECTURE.md  README_COLLABORATIVE_FEATURES.md  README_DEVELOPER_EXPERIENCE.md  README_TEST.md  TASK.md  app.py  benchmark_temp.py  direct_benchmark.py  dummy_circuit.qasm  example_config.yaml  pyproject.toml  quantum_config.yaml  requirements.txt  run_server.py  sample_circuit.json  setup.cfg  setup.py
.cursor/rules/: my_cli_sdk_cursorrule.mdc
.github/workflows/: e2e-enhanced-pipeline.yml  e2e-pipeline.yml
basic/: README.md
docs/: tutorial.md  user_guide.md
examples/plugins/: benchmark_plugin.py  hello_world_plugin.py  noise_insertion_plugin.py
my-cli-test-app/: README.md
my-cli-test-app/.github/workflows/: e2e-pipeline.yml
my-cli-test-app/ir/openqasm/: bell_verify.qasm
my-cli-test-app/ir/openqasm/mitigated/: shors_factoring_15_compatible_mitigated_zne_report.json
my-cli-test-app/results/analysis/finetuning/: bell_hardware_finetuned.json  bell_hardware_finetuned_manila.json  shors_factoring_15_finetuned.json
my-cli-test-app/results/benchmark/: shors_factoring_15_compatible_benchmark.json  shors_factoring_15_compatible_benchmark_cli.csv  shors_factoring_15_compatible_benchmark_cli.json  shors_factoring_15_compatible_benchmark_direct.json  shors_factoring_15_compatible_cost_estimation.json
my-cli-test-app/results/security/: shors_factoring_15_compatible.json
my-cli-test-app/results/simulation/base/: shors_factoring_15_compatible.json
my-cli-test-app/results/simulation/verify/: bell_verify_qiskit.json  shors_factoring_15_compatible_cirq.json  shors_factoring_15_compatible_qiskit.json
my-cli-test-app/results/tests/unit/: generated_results.json
my-cli-test-app/results/validation/: shors_factoring_15_llm.json
my-cli-test-app/source/circuits/: bell_qiskit.py  shors_factoring_15_compatible.py
my-new-app/: README.md  requirements.txt
my-new-app/.github/workflows/: e2e-enhanced-pipeline.yml
my-new-app/microservice/: Dockerfile
my-quantum-app/: .gitignore  README.md
my-quantum-app/ir/base/: shors_factoring_15_compatible.qasm
my-quantum-project/: README.md
my-quantum-project/.github/workflows/: e2e-pipeline.yml
my-quantum-project/ir/openqasm/base/: my_circuit.qasm
my-quantum-project/results/analysis/benchmark/: my_circuit_benchmark.json
my-quantum-project/results/analysis/cost/: my_circuit_cost.json
my-quantum-project/results/analysis/finetuning/: my_circuit_finetuned.json
my-quantum-project/results/analysis/resources/: my_circuit_resources.json
my-quantum-project/results/finetune/: my_circuit_finetuned.qasm
my-quantum-project/results/tests/unit/: test_summary.json
my-test-microservice/: README.md  app.py
nonexistent/: README.md  requirements.txt
nonexistent/.github/workflows/: e2e-pipeline.yml
results/analysis/finetuning/: shors_factoring_15_finetuned.json
results/resource_estimation/: ghz_state_resources.json  qft_4qubits_resources.json  shors_factoring_15_compatible_mitigated_zne_resources.json  shors_factoring_15_compatible_resources.json
results/tests/unit/: generated_results.json
src/quantum_cli_sdk/: __init__.py  cli.py  config.py  config_manager.py  dependency_analyzer.py  transpiler.py  utils.py
src/quantum_cli_sdk/commands/: __init__.py  benchmark.py  calculate_cost.py  estimate_resources.py  finetune.py  generate_ir.py  generate_microservice_tests.py  generate_tests.py  init.py  microservice.py  mitigate.py  optimize.py  package.py  provision.py  publish.py  run_app.py  security_scan.py  simulate.py  test.py  test_template.py.template  trial.py  validate.py
src/quantum_cli_sdk/hardware_runners/: ibm_hardware_runner.py
src/quantum_cli_sdk/qasm_includes/: qelib1.inc
test_env/: pyvenv.cfg
test_qasm/: ghz_state.qasm  qft_4qubits.qasm
tests/commands/: test_generate_tests.py  test_microservice.py  test_simulate.py
tests/commands/ir/: test_mitigate.py
~/: .pypirc
(+35 files in other folders)
